Make fm_gtk_init() idempotent, and fm_finalize() wants even calls.
The commit adds idempotency on fm_gtk_init(), not just fm_init().
And fm_finalize() will actually free resources only after number of
calls equal to fm_init() was done before.
The same about fm_gtk_init() with fm_gtk_finalize().

--- a/NEWS
+++ b/NEWS
@@ -241,6 +241,12 @@ Changes on 1.2.0 since 1.1.0:
     the number but text. Therefore if that list will be ever changed then
     it will be still accepted by libfm right way.
 
+* Added support for 'hidden' file attribute into file context menu and
+    file properties dialog.
+
+* Added options 'SortIgnoreCase' and 'MingleDirs' into folder context
+    menu.
+
 
 Changes on 1.1.0 since 1.0.1:
 
