--- a/po/gl.po
+++ b/po/gl.po
@@ -7,16 +7,16 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-24 00:29+0200\n"
-"PO-Revision-Date: 2013-07-31 07:22+0000\n"
-"Last-Translator: Miguel Anxo <mbouzada@gmail.com>\n"
+"PO-Revision-Date: 2013-07-31 09:26+0200\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1375255346.0\n"
+"X-Generator: Virtaal 0.7.0\n"
+"X-Poedit-Language: Galician\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1194,8 +1194,8 @@ msgstr ""
 #, c-format
 msgid "Merging file may contain only <Menu> top level tag, got <%s>"
 msgstr ""
-"A etiqueta <Not> só pode conter o fillo <And>, <Or>, <Filename> ou "
-"<Category>"
+"A mistura de ficheiros só pode conter a etiqueta de nivel superior <Menu>, "
+"ten <%s>"
 
 #: ../src/modules/vfs-menu.c:230
 #, c-format
